--- a/source/widget/courses/index.html
+++ b/source/widget/courses/index.html
@@ -82,8 +82,8 @@
             </div>
             <div class="course-detail">
                 <p class="course-title">
+                    <label class="course-label course-yellow-label">化学</label>
                     <label class="course-label course-blue-label">直播</label>
-                    <label class="course-label course-yellow-label">直播</label>
                     <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                 </p>
                 <p class="tip-for">适用于：想要培养化学学习兴趣的初三学员</p>
@@ -116,8 +116,8 @@
             </div>
             <div class="course-detail">
                 <p class="course-title">
+                    <label class="course-label course-yellow-label">化学</label>
                     <label class="course-label course-blue-label">直播</label>
-                    <label class="course-label course-yellow-label">直播</label>
                     <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                 </p>
                 <p class="tip-for">起止日期：2015.03.01 至 2015.08.31</p>
@@ -136,6 +136,72 @@
                 <li class="homework"><a href="#">作业批改</a></li>
                 <li class="answer"><a href="#">答疑辅导</a></li>
             </ul>
+        </div>
+        <div class="course-list course-test">
+            <div class="ui-avatar">
+                <div class="avatar-photo">
+                    <ul class="avatar-items">
+                        <li><a href="##"><img src="img/default_photo.png"></a></li>
+                        <li><a href="##"><img src="img/default_photo.png"></a></li>
+                    </ul>
+                    <div class="avatar-roll">
+                        <a class="prev none" href="javascript:void(0);">
+                            <em class="icon-chevron-left">左</em>
+                        </a>
+                        <a class="next " href="javascript:void(0);">
+                            <em class="icon-chevron-right">右</em>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="course-detail">
+                <p class="course-title">
+                    <label class="course-label course-yellow-label">化学</label>
+                    <label class="course-label course-green-label">录播</label>
+                    <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
+                </p>
+                <p class="tip-for">起止日期：2015.03.01 至 2015.08.31</p>
+                <p class="tip-for">
+                    <span>顾斐，蓝海老师</span>
+                    <span>课程满意度：<strong>92.52</strong></span>
+                    <span>已购买：<strong>230</strong></span>
+                </p>
+                <p class="amount-show amount-test">
+                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-record"></em>视听点播</a>
+                    <strong class="test-price"><span>￥</span>13.44</strong>
+                </p>
+            </div>
+            <ul class="course-num course-right-record">
+                <li class="interact-flash"><a href="#">互动视频</a></li>
+                <li class="direct-help"><a href="#">直播辅导</a></li>
+            </ul>
+        </div>
+        <div class="course-list course-test">
+            <div class="ui-avatar">
+                <div class="avatar-photo">
+                    <ul class="avatar-items">
+                        <li><a href="##"><img src="img/default_photo.png"></a></li>
+                    </ul>
+                    <!-- <span class="ui-user-name">朱韬</span> -->
+                </div>
+            </div>
+            <div class="course-detail">
+                <p class="course-title">
+                    <label class="course-label course-yellow-label">化学</label>
+                    <label class="course-label course-green-label">录播</label>
+                    <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
+                </p>
+                <p class="tip-for">起止日期：2015.03.01 至 2015.08.31</p>
+                <p class="tip-for">
+                    <span>课程满意度：<strong>92.52</strong></span>
+                    <span>已购买：<strong>230</strong></span>
+                </p>
+                <p class="amount-show amount-test">
+                    <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-test"></em>视听直播</a>
+                    <strong class="test-price"><span>￥</span>13.44</strong>
+                </p>
+            </div>
+            <a href="###" class="cancel-courseList">取消收藏</a>
         </div>
 
 
