--- a/source/widget/myCollect/index.html
+++ b/source/widget/myCollect/index.html
@@ -28,7 +28,7 @@
                         </p>
                     </div>
                 </div>
-                <span class="cancel-collect">取消收藏</span>
+                <!-- <span class="cancel-collect">取消收藏</span> -->
             </div>
             <div class="collect-feed">
                 <div class="collect-avatar">
@@ -44,7 +44,7 @@
                        </p>
                    </div>
                </div>
-               <span class="cancel-collect">取消收藏</span>
+               <!-- <span class="cancel-collect">取消收藏</span> -->
            </div>
            <div class="collect-feed">
             <div class="collect-avatar">
@@ -60,7 +60,7 @@
                     </p>
                 </div>
             </div>
-            <span class="cancel-collect">取消收藏</span>
+            <!-- <span class="cancel-collect">取消收藏</span> -->
         </div>
         <div class="collect-feed icoVoicePlaying">
             <div class="collect-avatar">
@@ -75,7 +75,7 @@
                     <input type="hidden" value="http://pic04.xesimg.com/129.mp3" id="voiceUrl" autocomplete="off">
                 </div>
             </div>
-            <span class="cancel-collect">取消收藏</span>
+            <!-- <span class="cancel-collect">取消收藏</span> -->
         </div>
         <audio style="display:none;" src="http://img04.xesimg.com/xuelibugou_logo.png" controls="true" autoplay="true" id="audioUrl">
         </audio>
@@ -92,7 +92,7 @@
                     </p>
                 </div>
             </div>
-            <span class="cancel-collect">取消收藏</span>
+            <!-- <span class="cancel-collect">取消收藏</span> -->
         </div>
         <div class="collect-feed">
             <div class="collect-avatar">
@@ -110,7 +110,7 @@
                     <div class="colect-media colect-media-expand colect-type-img hide"> </div>
                 </div>
             </div>
-            <span class="cancel-collect">取消收藏</span>
+            <!-- <span class="cancel-collect">取消收藏</span> -->
         </div>
     </div>
 
