--- a/source/widget/header/header.html
+++ b/source/widget/header/header.html
@@ -318,6 +318,11 @@
         <div class="columns-wrap">
             <div class="l-columns left w-1050 s-border">left 个人中心左边主要内容区哉</div>
         </div>
+         <!-- 左右两例 -->
+        <div class="columns-wrap">
+            <div class="l-columns left w-130 s-border">left 个人设置内容区哉</div>
+            <div class="l-columns right w-1050 s-border">left 个人设置内容区哉</div>
+        </div>
     </div>
     <!-- 内容部分 -->
     <!-- 这是jquery库文件 -->
