--- a/source/widget/fresh/index.html
+++ b/source/widget/fresh/index.html
@@ -448,7 +448,7 @@
                      <i class="fresh-v fresh-v-yellow" class="left"></i>
                   </div>
                   <div class="fresh-info">
-                    快来看看认真的韬哥和小帆老师在为来访的学员题词~！ 信韬哥！得满分！ 新小帆！
+                    快来看看认真的韬哥和小帆老师在为来访的学员题词~！ 信韬哥！得满分！ 新小帆！<a target="_blank" href="http://t.xueersi.com/7boW01nx">http://t.xueersi.com/7boW01nx</a>
                   </div>
                </div> 
                <!--新鲜事右侧头部文本消息显示结束-->
@@ -483,8 +483,10 @@
              </div>
         </div>
         <div class="fresh-send-form">
-             <i class="fresh-send-emote"></i>
-             <a href="javascript:void(0);">表情</a>
+             <div class="fresh-send-emote-click-btn fresh-emote-current" flag="0">
+                <i class="fresh-send-emote"></i>
+                <a href="javascript:void(0);">表情</a>
+             </div>
              <div class="fresh-send-upload">
                 <input class="fresh-fileToUpload" id="fresh-fileToUpload" type="file" size="45"  name="dynImg" accept="image/*" />
              </div>
