--- a/source/widget/gold/gold.html
+++ b/source/widget/gold/gold.html
@@ -17,7 +17,7 @@
 <ul class="gold-detail-title">
     <li class="gold-detail-title-on" data-target=".gold-detail-container">金币明细</li>
     <li data-target=".gold-store-container">金币商城</li>
-    <li data-target=".b">我兑换的</li>
+    <li data-target=".gold-exchange-container">我兑换的</li>
 </ul>
 <!-- 金币明细 -->
 <div class="gold-detail-container gold-detail-block-change" style="display: block">
@@ -258,8 +258,178 @@
         </div>
     </div>
 </div>
-<div class="b gold-detail-block-change">
-3333
+<div class="gold-exchange-container gold-detail-block-change">
+    <ul class="gold-exchange-title-container">
+        <li class="gold-exchange-title-on" exchange-target=".gold-exchange-card-box">魔法卡</li>
+        <li exchange-target=".gold-exchange-present-box">实物礼品</li>
+    </ul>
+    <div class="gold-exchange-card-box gold-exchange-block-change" style="display: block">
+        <div class="gold-exchange-rank">
+            <span class="gold-exchange-rank-by gold-exchange-use-focus" use-target=".gold-exchange-use-box">未使用</span>
+            <p></p>
+            <span class="gold-exchange-rank-by" use-target=".gold-exchange-used-box">已使用</span>
+        </div>
+        <div class="gold-exchange-use-box gold-exchange-use-block-change">
+            <div class="gold-exchange-show-title">
+                <span>图片</span>
+                <span>名称</span>
+                <span>兑换时间</span>
+                <span>过期时间</span>
+                <span>操作</span>
+            </div>
+            <div class="gold-exchange-show-container">
+                <div class="gold-exchange-show" style="border-top: none">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use"><span>使用</span></div>
+                </div>
+                <div class="gold-exchange-show">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use"><span>使用</span></div>
+                </div>
+                <div class="gold-exchange-show">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use"><span>使用</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="gold-exchange-used-box gold-exchange-use-block-change">
+            <div class="gold-exchange-show-title">
+                <span>图片</span>
+                <span>名称</span>
+                <span>兑换时间</span>
+                <span>过期时间</span>
+                <span>操作</span>
+            </div>
+            <div class="gold-exchange-show-container">
+                <div class="gold-exchange-show" style="border-top: none">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use">生效中</div>
+                </div>
+                <div class="gold-exchange-show">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use">生效中</div>
+                </div>
+                <div class="gold-exchange-show">
+                    <span class="gold-exchange-img"><img src="img/gold-card-icon.png" /></span>
+                    <span class="gold-exchange-name">红名卡</span>
+                    <span class="gold-exchange-time">2015-10-25 15:46</span>
+                    <span class="gold-exchange-show-overdue">2015-10-25</span>
+                    <div class="gold-exchange-use">生效中</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="gold-exchange-present-box gold-exchange-block-change">
+        <div class="gold-exchange-present-card-container">
+            <div class="gold-exchange-present-card-box">
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="gold-exchange-present-card-box">
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+                <div class="gold-exchange-present-card">
+                    <div class="gold-exchange-present-img-box">
+                        <img src="img/present-img.png" />
+                    </div>
+                    <div class="gold-exchange-present-intro-box">
+                        <span class="gold-exchange-present-card-name">奖品名称:<span>网校定制扑克牌2副</span></span>
+                        <span class="gold-exchange-present-card-name">兑换时间:<span>2015-10-25 15:46</span></span>
+                        <span class="gold-exchange-present-card-name">兑换个数:<span>1</span></span>
+                        <span class="gold-exchange-present-card-name">发送状态:<span>未发送</span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="../../lib/jQuery/1.11.1/jquery.js"></script>
 <script src="gold.js"></script>
