--- a/source/widget/live/live.html
+++ b/source/widget/live/live.html
@@ -428,7 +428,7 @@
                 <div class="live-course-hover">
                     <div class="live-course-title"></div>
                     <span class="live-course-show-title">［老杜物理］理科学霸征集令第一讲</span>
-                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
+                    <span class="live-course-content" style="display: none">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</span>
                 </div>
             </div>
             <div class="live-time-tip">
