header---content---footer

--- a/source/widget/header/header.html
+++ b/source/widget/header/header.html
@@ -21,8 +21,8 @@
                     <a href="#">退出</a>
                 </div>
                 <ul class="s-mobile">
-                    <li class="">
-                        <span>消息</span>
+                    <li class="tips set-show">
+                        <span>消息<i class="nav-r"><s class="nav-s">◇</s></i></span>
                         <div class="menu-layer">
                             <ul>
                                 <li data-type="1">
@@ -45,8 +45,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li>
-                        <span>移动网校</span>
+                    <li class="m-xes set-show">
+                        <span>移动网校<i class="nav-r"><s class="nav-s">◇</s></i></span>
                         <div class="menu-layer">
                             <ul>
                                 <li>
@@ -76,8 +76,8 @@
                     <li>
                         <a href="#">订单</a>
                     </li>
-                    <li class="">
-                        <span>卡激活</span>
+                    <li class="set-show">
+                        <span>卡激活<i class="nav-r"><s class="nav-s">◇</s></i> </span>
                         <div class="menu-layer">
                             <ul>
                                 <li>
@@ -120,8 +120,18 @@
                     <li>
                         <a href="#" class="register">免费注册</a>
                     </li>
-                    <li>
-                        <span>移动网校</span>
+                    <li class="m-xes set-show">
+                        <span>移动网校<i class="nav-r"><s class="nav-s">◇</s></i></span>
+                         <div class="menu-layer">
+                            <ul>
+                                <li>
+                                    <a href="#">手机版</a>
+                                </li>
+                                <li>
+                                    <a href="#">IPAD版</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -146,8 +156,8 @@
                         </a>
 
                     </li>
-                    <li class="">
-                        <span>卡激活</span>
+                    <li class="set-show">
+                        <span>卡激活<i class="nav-r"><s class="nav-s">◇</s></i></span>
                         <div class="menu-layer">
                             <ul>
                                 <li>
@@ -274,7 +284,11 @@
     </div>
     <!-- 头部logo**and**搜索**购物车 -->
     <div class="ui-header-nav">
-        <div class="nav-classify">全部课程分类</div>
+        <div class="nav-classify hover">
+            <a href="#">
+                全部课程分类 <i class="nav-r"><s class="nav-s">◇</s></i> 
+            </a>
+        </div>
         <ul class="nav">
             <li class="current">
                 <a href="">找老师</a>
@@ -330,5 +344,55 @@
     <!-- 这是当前模块js文件 -->
     <script type="text/javascript" src="header.js"></script>
     <!-- 这是页脚部分代码  -->
+    <div id="footer">
+        <div class="foot_service">
+            <a target="_blank" class="service_share" href="http://www.xueersi.com/article/detail/1825">
+                <span>名师</span>
+                <p>38%清华毕业平均教龄5.1年100%面授S级老师</p>
+            </a>
+            <a target="_blank" class="service_system" href="http://www.xueersi.com/article/detail/1824">
+                <span>陪伴</span>
+                <p>直播授课,QQ群,APP随时答疑名师就在你身边</p>
+            </a>
+            <a target="_blank" class="service_live" href="http://www.xueersi.com/article/detail/1814">
+                <span>方便</span>
+                <p>足不出户，免去路途奔波随时随地反复看</p>
+            </a>
+            <a target="_blank" class="service_interaction" href="http://www.xueersi.com/app">
+                <span>有效</span>
+                <p>在线练习及时反馈已累计培养39名中高考状元</p>
+            </a>
+        </div>
+
+        <div class="foot_area">
+            <p>
+                <a href="http://www.xueersi.com">网校首页</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1219">关于我们</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1220">合作专区</a>
+                |
+                <a href="http://www.xueersi.com/article/detail/1538">联系我们</a>
+                |
+                <a class="red" href="http://www.xueersi.com/article/detail/1495">版权声明</a>
+                |
+                <a href="http://www.xueersi.com/article/">帮助中心</a>
+            </p>
+            <p>
+                客服电话： <strong>400-800-2211</strong>
+                （免长途话费） Copyright &copy; 2009-2015 www.xueersi.com All Rights Reserved
+            </p>
+            <p>
+                北京学而思教育科技有限公司
+                <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action">京ICP备09032638号</a>
+                京公网安备:1101082103
+            </p>
+            <p class="link">
+                <a target="_blank" href="https://search.szfw.org/cert/l/CX20120925001738002003" id="___szfw_logo___">
+                    <img src="http://x04.xesimg.com/web/201209/13487953879693.png"></a>
+            </p>
+        </div>
+    </div>
+     <!-- 这是页脚结束部分代码  -->
 </body>
 </html>
